[package]
name = "flowlet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
deeb = "0.0.11"
dialoguer = "0.11.0"
dirs = "6.0.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
ulid = { version = "1.2.1", features = ["serde"] }
url = "2.5.4"
